# goqso

./: .gitignore  ARCHIVE.md  CHANGELOG.md  CLAUDE.md  COMMUNICATION.md  PERFORMANCE.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  temp_wsjtx_import.adi  vite.config.ts
.github/: copilot-instructions.md
docs/: LOGGING-UX-DESIGN.md  cty.xsd
scripts/: analyze_coverage.py  analyze_prefixes.py  build_prefix_rules.py  check_entities.py  convert_entity_ids.py  generate_prefix_rules.py  generate_prefixes.py  generate_reference.py  (+2 more)
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  gridcalc.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: canadian_provinces.json  dxcc_entities.json  dxcc_official.txt  prefix_rules.json  us_states.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/adif/: bands.rs  mod.rs  modes.rs  parser.rs  writer.rs
src-tauri/src/awards/: dxcc.rs  mod.rs  vucc.rs  was.rs
src-tauri/src/commands/: adif.rs  awards.rs  band_activity.rs  diagnostics.rs  fcc.rs  lotw.rs  mod.rs  qso.rs  settings.rs  state.rs  time_utils.rs  udp.rs
src-tauri/src/cty/: parser.rs
src-tauri/src/db/: awards.rs  init.rs  migrations.rs  mod.rs  qso.rs  schema.rs
src-tauri/src/fcc/: download.rs  mod.rs  parser.rs
src-tauri/src/lotw/: adif.rs  client.rs  mod.rs  sync.rs  tqsl.rs
src-tauri/src/qso_tracker/: mod.rs  state.rs  tracker.rs
src-tauri/src/reference/: dxcc.rs  grid_location.rs  mod.rs  prefixes.rs  states.rs
src-tauri/src/udp/: listener.rs  mod.rs  wsjtx.rs
(+33 files in other folders)
